fix(supported): display supported mime-types list better at lower res
The grid layout for the supported mime-types page does not look good at
a resolution lower than 1000px so below that width the mime-types list
is laid out as one long list.

--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -324,13 +324,18 @@ footer .copyright {
 
 .mime-types li {
   border: 1px solid #BCE8F1;
-  display: inline-block;
-  margin-right: 10px;
   margin-bottom: 10px;
   padding: 10px;
-  width: calc(25% - 10px);
   color: #31708F;
   background-color: #D9EDF7;
+}
+
+@media (min-width: 1000px) {
+  .mime-types li {
+    margin-right: 10px;
+    display: inline-block;
+    width: calc(25% - 10px);
+  }
 }
 
 .alert-code {
